--- a/classes/AppleWatch.cls
+++ b/classes/AppleWatch.cls
@@ -8,10 +8,10 @@ Public with sharing Class AppleWatch{
         t.WhatId      = opp.Id;
         insert t;
      /*conflict here test 2334*/ 
-     /*conflict qweffwsedfasf test rfgdasfg*/
-     /*conflict 55555555*/
-     /*conflict afgafgr test 2334*/
-     /*conadfrflict here test 2334*/
+     /*conflict  test */
+     /*conflict MODDD2 */
+     /*conflict   2334*/
+     /*role@role.com.dev1*/
    }
   
   }
