--- a/classes/AppleWatch.cls
+++ b/classes/AppleWatch.cls
@@ -7,11 +7,9 @@ Public with sharing Class AppleWatch{
         t.Priority    = 'High';
         t.WhatId      = opp.Id;
         insert t;
-     /*conflict here test 2334*/ 
-     /*conflict qweffwsedfasf test rfgdasfg*/
-     /*conflict 55555555*/
-     /*conflict afgafgr test 2334*/
-     /*conadfrflict here test 2334*/
+     /*Commit 4*/
+     /*Comment Number 2*/ 
+     
    }
   
   }
