--- a/classes/DoNotUseAppleWatch.cls
+++ b/classes/DoNotUseAppleWatch.cls
@@ -1,10 +1,9 @@
-Public with sharing Class AppleWatch{
+Public with sharing Class DoNotUseAppleWatch{
  Public Static void appleWatchmethod(list<Opportunity> lopt ){
     for (Opportunity opp : lopt) {
         Task t        = new Task();
         t.Subject     = 'Apple Watch Promo';
         t.Description = 'Send them one ASAP';
-        t.Priority    = 'High';
         t.WhatId      = opp.Id;
         insert t;
      /*Commit conflict*/
