US-0000034: Test Online Conflict

--- a/classes/AppleWatch.cls
+++ b/classes/AppleWatch.cls
@@ -7,8 +7,8 @@ Public with sharing Class AppleWatch{
         t.Priority    = 'High';
         t.WhatId      = opp.Id;
         insert t;
-     /*Commit conflict*/
-     /*Comment Number 2123*/ 
+     /*Commit conflict222*/
+     /*Comment Number */ 
      
    }
   
